# Distributed-Page-Ranking

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  cluster.2machine.conf  cluster.local.conf  team1-preprocessor.md  team4-worker.md
data/sample/: twitter_sample_ids.csv  twitter_sample_snap.txt
docs/: architecture.md  hardware-architecture.md  infra-requirements.md  option-a-coordinator.md  option-b-leaderless.md  press-release.md  process-flow.md  team2-networking.md  team3-coordinator.md
scripts/: monitor.py  monitoring_agent.py  postprocess.py  preprocessor.py  preprocessor_large.py  run_local_demo.sh  start_machine_a.sh  start_machine_b.sh
src/common/: config.cpp  config.h
src/coordinator/: main.cpp
src/net/: message.cpp  message.h  socket_utils.cpp  socket_utils.h
src/worker/: main.cpp  partition_loader.cpp  partition_loader.h
